# TestProjects

./: .gitignore  README.md
test1/: CMakeLists.txt  README.md  conanfile.txt
test1/profiles/: default.cfg
test1/src/: main.c
tests_embd1/: .mxproject  CMakeLists.txt  Makefile  README.md  STM32F303RETx_FLASH.ld  conanfile.txt  tests_embd1.ioc
tests_embd1/Core/Src/: main.c  stm32f3xx_hal_msp.c
tests_embd1/Drivers/: CMakeLists.txt
tests_embd1/cmake/: f_compile_definitions.cmake  f_compile_options.cmake
tests_embd1/profiles/: default.cfg
tests_embd1/toolchains/: toolchain_stm32f3.cmake
